PAC-P162: Core modules, scripts, and infrastructure updates

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,95 @@
+# ══════════════════════════════════════════════════════════════════════════════
+# CHAINBRIDGE SOVEREIGN NODE - DOCKER IGNORE
+# PAC-OPS-P95-CONTAINERIZATION
+# ══════════════════════════════════════════════════════════════════════════════
+# Exclude files that should NOT be copied into the container image.
+# This reduces image size and prevents sensitive data leakage.
+# ══════════════════════════════════════════════════════════════════════════════
+
+# ─────────────────────────────────────────────────────────────────────────────
+# VERSION CONTROL
+# ─────────────────────────────────────────────────────────────────────────────
 .git
 .gitignore
+.gitattributes
+*.bundle
+
+# ─────────────────────────────────────────────────────────────────────────────
+# PYTHON VIRTUAL ENVIRONMENTS
+# ─────────────────────────────────────────────────────────────────────────────
+.venv/
+venv/
+env/
 .env
+.env.local
+.env.*.local
 .env.*.backup
-local_repo_snapshot.bundle
+
+# ─────────────────────────────────────────────────────────────────────────────
+# PYTHON BYTECODE & CACHE
+# ─────────────────────────────────────────────────────────────────────────────
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+
+# ─────────────────────────────────────────────────────────────────────────────
+# LOGS (Generated at runtime, mounted as volume)
+# ─────────────────────────────────────────────────────────────────────────────
 logs/
 *.log
-__pycache__/
-.venv/
-.venv/*
-*.pyc
+*.log.*
+archived_logs/
+
+# ─────────────────────────────────────────────────────────────────────────────
+# BUILD ARTIFACTS
+# ─────────────────────────────────────────────────────────────────────────────
+build/
+dist/
+*.egg-info/
+htmlcov/
+.coverage
+
+# ─────────────────────────────────────────────────────────────────────────────
+# IDE & EDITOR
+# ─────────────────────────────────────────────────────────────────────────────
+.vscode/
+.idea/
+*.swp
+*~
+
+# ─────────────────────────────────────────────────────────────────────────────
+# TESTING
+# ─────────────────────────────────────────────────────────────────────────────
+.pytest_cache/
+.tox/
+
+# ─────────────────────────────────────────────────────────────────────────────
+# SECURITY SENSITIVE
+# ─────────────────────────────────────────────────────────────────────────────
+keys/
+*.pem
+*.key
+secrets/
+
+# ─────────────────────────────────────────────────────────────────────────────
+# DATA & REPORTS
+# ─────────────────────────────────────────────────────────────────────────────
+data/
+reports/
+proofpacks/
+tracking/
+
+# ─────────────────────────────────────────────────────────────────────────────
+# ARCHIVE
+# ─────────────────────────────────────────────────────────────────────────────
+archive/
+archived_pacs/
+local_repo_snapshot.bundle
+
+# ─────────────────────────────────────────────────────────────────────────────
+# MISC
+# ─────────────────────────────────────────────────────────────────────────────
+*.sarif
+Makefile*
