PAC-SYS-P250: Phase 2 Closure - The Invisible Bank Complete
Components Delivered:
- P200: The Vault (Double-Entry Ledger) - 9/9 tests
- P201: The Cashier (Settlement Engine) - 11/11 tests
- P202: The Tollbooth (Fee Engine) - 9/9 tests
- P203: The Exchange (Multi-Currency) - 10/10 tests
- P210: Controller v2.0 Integration
- P211: API v2.0 with FinancialTrace - 4/4 tests
- P220: Container v2.0 (Dockerfile, docker-compose)
- P222: OpenAPI Contract v2.0
- P223: Python SDK v2.0

Total: 43/43 tests passed
Invariants: 8 financial + 2 system enforced

Attestation: MASTER-BER-P250-CLOSURE
Hash: 6c26da019997ec8b3cdc27336e52da90456fe005e02f92af732ea7664dc144fb

The Bank is Sealed. The Mesh awaits.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,28 @@
 # ══════════════════════════════════════════════════════════════════════════════
-# CHAINBRIDGE SOVEREIGN NODE - DOCKER COMPOSE
-# PAC-OPS-P95-CONTAINERIZATION
+# CHAINBRIDGE SOVEREIGN NODE v2.0.0 - DOCKER COMPOSE
+# PAC-OPS-P220-CONTAINER-V2
 # ══════════════════════════════════════════════════════════════════════════════
-# "The Sovereign Node is a ship, not a building."
+# "The Bank is in the Box."
+# CAPABILITIES: Trinity Gates + Invisible Bank + Financial Transparency
 # ══════════════════════════════════════════════════════════════════════════════
 
 services:
   # ─────────────────────────────────────────────────────────────────────────────
-  # SOVEREIGN NODE - Main ChainBridge Trinity Gateway
+  # SOVEREIGN NODE v2.0 - ChainBridge Trinity + Invisible Bank Gateway
   # ─────────────────────────────────────────────────────────────────────────────
   sovereign-node:
     build:
       context: .
       dockerfile: Dockerfile
     container_name: chainbridge-sovereign
-    image: chainbridge/sovereign-node:1.0.0
+    image: chainbridge/sovereign-node:2.0.0
     ports:
       - "8000:8000"
     environment:
       - PYTHONUNBUFFERED=1
       - PORT=8000
       - LOG_LEVEL=INFO
+      - CHAINBRIDGE_VERSION=2.0.0
     volumes:
       # Persist logs outside container
       - ./logs:/app/logs
@@ -37,8 +39,9 @@ services:
       - chainbridge-net
     labels:
       - "com.chainbridge.service=sovereign-node"
-      - "com.chainbridge.version=1.0.0"
-      - "com.chainbridge.pac=PAC-OPS-P95"
+      - "com.chainbridge.version=2.0.0"
+      - "com.chainbridge.pac=PAC-OPS-P220"
+      - "com.chainbridge.capabilities=Trinity Gates, Invisible Bank"
 
   # ─────────────────────────────────────────────────────────────────────────────
   # LEGACY: Benson API Server (backward compatibility)
