--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,7 @@ local_repo_snapshot.bundle
 Dockerfile.*.local
 docker-compose.override.yml
 .venv-lean/
+
+# Rust build artifacts
+**/target/
+Cargo.lock
