--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,8 @@ contourpy==1.3.0
 cryptography==46.0.1
 cycler==0.12.1
 Cython==3.1.4
+# PAC-SEC-P820/P825: Post-Quantum Cryptography - ML-DSA-65 (FIPS 204)
+dilithium-py==1.4.0
 dash==3.2.0
 dash-bootstrap-components==2.0.4
 dash-core-components==2.0.0
