fix: resolve third-party errors and code quality issues
Configuration: Exclude .venv from analysis, add ruff/pylint message control
Code quality: Fix unused imports, add encoding to open(), fix variable shadowing
New modules: pac_registry.py, heartbeat system, heartbeat_panel.py

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,10 +6,15 @@
     "${workspaceFolder}"
   ],
   "python.analysis.typeCheckingMode": "basic",
-  "python.analysis.diagnosticMode": "workspace",
+  "python.analysis.diagnosticMode": "openFilesOnly",
   "python.analysis.useLibraryCodeForTypes": true,
   "python.analysis.autoSearchPaths": true,
   "python.analysis.exclude": [
+    "**/.venv/**",
+    "**/node_modules/**",
+    "**/__pycache__/**",
+    "**/build/**",
+    "**/dist/**",
     "/Users/johnbozza/crypto1.0/**"
   ],
   "files.exclude": {
@@ -40,5 +45,7 @@
   ],
   "python.testing.pytestEnabled": true,
   "python.testing.unittestEnabled": false,
-  "yaml.validate": true
+  "yaml.validate": true,
+  "json.schemas": [],
+  "json.schemaDownload.enable": false
 }
