--- a/chainbridge_kernel/Cargo.toml
+++ b/chainbridge_kernel/Cargo.toml
@@ -42,6 +42,9 @@ codegen-units = 1
 panic = "abort"
 strip = true
 
+[dev-dependencies]
+tempfile = "3.10"
+
 [profile.dev]
 opt-level = 0
 debug = true
