PAC-JEFFREY-CORR-001: Corrective commit - stage all governance/ops/sandbox modules
Classification: CORRECTIVE
Governance Tier: LAW
Issuer: JEFFREY (STRATEGY_ONLY)

Files resolved:
- 2 modified: .vscode/settings.json, heartbeat/__init__.py
- 27 added: governance, ops, sandbox, crypto, execution modules

Invariants enforced:
- INV-EXEC-001: Clean state before execution
- INV-EXEC-002: Single source of truth
- INV-DOC-002: Proof before execution

BENSON [GID-00]: All artifacts explicitly committed per Block18 constraints.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,5 +47,6 @@
   "python.testing.unittestEnabled": false,
   "yaml.validate": true,
   "json.schemas": [],
-  "json.schemaDownload.enable": false
+  "json.schemaDownload.enable": false,
+  "github.copilot.chat.virtualTools.threshold": 0
 }
