fix: linting and config updates
- Remove unused imports (asyncio, field) from xrp_connector.py
- Fix lazy logging format in xrp_connector.py
- Add BER-PILOT-STRIKE-01.json execution report
- Disable coverage in chainpay-service pytest.ini (run from root)
- Update canvas_api.py with V2.0.0 Anchor-Logic Engine

--- a/ChainBridge/chainpay-service/pytest.ini
+++ b/ChainBridge/chainpay-service/pytest.ini
@@ -10,13 +10,11 @@ python_functions = test_*
 testpaths = tests
 
 # Output options
+# Note: Coverage disabled - run from root repo with pytest-cov installed
 addopts = 
     -v
     --strict-markers
     --tb=short
-    --cov=app
-    --cov-report=term-missing
-    --cov-report=html:htmlcov
 
 # Markers for test categorization
 markers =
