🔒 PAC-CORRECTIVE-ENV-LOCK-59: Runtime locked to Python 3.11.14
CONSTITUTIONAL ENFORCEMENT:
- .python-version: Updated to 3.11.14 (canonical)
- pyproject.toml: Added [tool.chainbridge] zero-drift policy
- occ/occ_api.py: Injected constitutional gateway (literal 3.11.14 check)

TAINTED ARTIFACT PURGE:
- REMOVED: reports/PNC-STRIKE-REPORT-001.json (3.9.6 runtime)
- REMOVED: reports/BER-PNC-STRIKE-001.json (3.9.6 runtime)
- REASON: Generated under non-canonical Python 3.9.6

RNP PROTOCOL: Full environment replacement completed
GATEWAY: sys.version_info[:3] == (3, 11, 14) || sys.exit(1)

Signed-off-by: BENSON-GID-00
Authorized-by: ARCHITECT-JEFFREY
PAC-ID: PAC-CORRECTIVE-ENV-LOCK-59

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,13 @@
 line-length = 140
 target-version = ["py311"]
 
+[tool.chainbridge]
+# Canonical Python Runtime - CONSTITUTIONAL LAW
+# Updated per PAC-CORRECTIVE-ENV-LOCK-59 Addendum-A
+python-version = "3.11.14"
+zero-drift = true
+fail-closed = true
+
 [tool.isort]
 profile = "black"
 line_length = 140
