SCRAM domain canonicalized - R2A/R2B/R2C-002 complete
PAC-JEFFREY-SCRAM-SCHEMA-REPLACEMENT-R2A-001: ACCEPTED
PAC-JEFFREY-SCRAM-POLICY-REPLACEMENT-R2B-001: ACCEPTED
PAC-JEFFREY-SCRAM-RUST-SENTINEL-REPLACEMENT-R2C-002: ACCEPTED

Artifacts:
- schemas/scram_event_schema.json (canonical)
- core/governance/scram_policies.json (canonical, LAW-tier)
- chainbridge_kernel/src/scram_sentinel.rs (replaced, 457 lines)
- .github/workflows/scram-validation.yml (fixed actions/rust)

Invariants closed:
- INV-SCRAM-003: Hardware-bound via process::exit(1)
- INV-FAIL-CLOSED: All error paths terminate
- INV-NO-RECOVERY: -> ! return type
- INV-LATENCY-BOUND: MAX_TERMINATION_MS = 500

Ledger entries: CA-2026-01-16-001, CA-2026-01-16-002, CA-2026-01-16-003

SCRAM domain sealed. Control Plane R2 unblocked.

--- a/.github/workflows/scram-validation.yml
+++ b/.github/workflows/scram-validation.yml
@@ -11,14 +11,121 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Setup Rust
-        uses: actions/rust/setup@v1
-        with:
-          toolchain: stable
+        uses: dtolnay/rust-toolchain@stable
       - name: Install System Dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y libudev-dev pkg-config
       - name: Validate Sentinel Module Exists
         run: |
+          echo "=== INV-SCRAM-003: Hardware Sentinel Validation ==="
+          if [ ! -f "chainbridge_kernel/src/scram_sentinel.rs" ]; then
+            echo "FAIL: scram_sentinel.rs not found"
+            exit 1
+          fi
+          echo "✓ scram_sentinel.rs exists"
+      - name: Validate SCRAM Policy Exists
+        run: |
+          echo "=== INV-SCRAM-POLICY-REQUIRED: Policy Validation ==="
+          if [ ! -f "core/governance/scram_policies.json" ]; then
+            echo "FAIL: scram_policies.json not found"
+            exit 1
+          fi
+          python3 -m json.tool core/governance/scram_policies.json > /dev/null
+          echo "✓ scram_policies.json valid JSON"
+      - name: Validate SCRAM Schema Exists
+        run: |
+          echo "=== SCRAM Schema Validation ==="
+          if [ ! -f "schemas/scram_event_schema.json" ]; then
+            echo "FAIL: scram_event_schema.json not found"
+            exit 1
+          fi
+          python3 -m json.tool schemas/scram_event_schema.json > /dev/null
+          echo "✓ scram_event_schema.json valid JSON"
+      - name: Build Rust Sentinel
+        run: |
+          echo "=== Building SCRAM Sentinel ==="
+          cd chainbridge_kernel
+          cargo build --release
+          echo "✓ Sentinel compiled successfully"
+      - name: Run Sentinel Tests
+        run: |
+          echo "=== Running Sentinel Tests ==="
+          cd chainbridge_kernel
+          cargo test
+          echo "✓ All sentinel tests passed"
+      - name: Validate Python SCRAM Controller
+        run: |
+          echo "=== Python SCRAM Controller Validation ==="
+          python3 -c "
+import ast
+import sys
+
+# Parse the SCRAM controller
+with open('core/governance/scram.py', 'r') as f:
+    source = f.read()
+
+try:
+    ast.parse(source)
+    print('✓ scram.py is valid Python')
+except SyntaxError as e:
+    print(f'FAIL: Syntax error in scram.py: {e}')
+    sys.exit(1)
+
+# Verify critical components exist
+required = ['SCRAMController', 'SCRAMState', 'MAX_TERMINATION_MS']
+for req in required:
+    if req not in source:
+        print(f'FAIL: {req} not found in scram.py')
+        sys.exit(1)
+    print(f'✓ {req} present')
+
+print('✓ SCRAM Controller validation complete')
+"
+      - name: Validate Policy Governance Tier
+        run: |
+          echo "=== Governance Tier Validation ==="
+          python3 -c "
+import json
+import sys
+
+with open('core/governance/scram_policies.json', 'r') as f:
+    policy = json.load(f)
+
+# Check LAW tier
+tier = policy.get('governance', {}).get('tier')
+if tier != 'LAW':
+    print(f'FAIL: Governance tier must be LAW, got {tier}')
+    sys.exit(1)
+print(f'✓ Governance tier: {tier}')
+
+# Check fail-closed
+fail_closed = policy.get('fail_closed', {}).get('enabled')
+if not fail_closed:
+    print('FAIL: fail_closed must be enabled')
+    sys.exit(1)
+print(f'✓ Fail-closed: {fail_closed}')
+
+# Check dual-key
+dual_key = policy.get('authorization', {}).get('dual_key_required')
+if not dual_key:
+    print('FAIL: dual_key_required must be true')
+    sys.exit(1)
+print(f'✓ Dual-key required: {dual_key}')
+
+print('✓ Policy governance validation complete')
+"
+      - name: Summary
+        run: |
+          echo "========================================"
+          echo "  SCRAM VALIDATION COMPLETE"
+          echo "========================================"
+          echo "  ✓ INV-SCRAM-003: Hardware Sentinel"
+          echo "  ✓ INV-SCRAM-POLICY-REQUIRED: Policy"
+          echo "  ✓ SCRAM Schema: Valid"
+          echo "  ✓ Rust Sentinel: Compiled"
+          echo "  ✓ Python Controller: Valid"
+          echo "  ✓ Governance Tier: LAW"
+          echo "========================================"
