--- a/.github/workflows/scram-validation.yml
+++ b/.github/workflows/scram-validation.yml
@@ -59,64 +59,12 @@ jobs:
       - name: Validate Python SCRAM Controller
         run: |
           echo "=== Python SCRAM Controller Validation ==="
-          python3 -c "
-import ast
-import sys
+          python3 scripts/validate_scram_controller.py
 
-# Parse the SCRAM controller
-with open('core/governance/scram.py', 'r') as f:
-    source = f.read()
-
-try:
-    ast.parse(source)
-    print('✓ scram.py is valid Python')
-except SyntaxError as e:
-    print(f'FAIL: Syntax error in scram.py: {e}')
-    sys.exit(1)
-
-# Verify critical components exist
-required = ['SCRAMController', 'SCRAMState', 'MAX_TERMINATION_MS']
-for req in required:
-    if req not in source:
-        print(f'FAIL: {req} not found in scram.py')
-        sys.exit(1)
-    print(f'✓ {req} present')
-
-print('✓ SCRAM Controller validation complete')
-"
       - name: Validate Policy Governance Tier
         run: |
           echo "=== Governance Tier Validation ==="
-          python3 -c "
-import json
-import sys
-
-with open('core/governance/scram_policies.json', 'r') as f:
-    policy = json.load(f)
-
-# Check LAW tier
-tier = policy.get('governance', {}).get('tier')
-if tier != 'LAW':
-    print(f'FAIL: Governance tier must be LAW, got {tier}')
-    sys.exit(1)
-print(f'✓ Governance tier: {tier}')
-
-# Check fail-closed
-fail_closed = policy.get('fail_closed', {}).get('enabled')
-if not fail_closed:
-    print('FAIL: fail_closed must be enabled')
-    sys.exit(1)
-print(f'✓ Fail-closed: {fail_closed}')
-
-# Check dual-key
-dual_key = policy.get('authorization', {}).get('dual_key_required')
-if not dual_key:
-    print('FAIL: dual_key_required must be true')
-    sys.exit(1)
-print(f'✓ Dual-key required: {dual_key}')
-
-print('✓ Policy governance validation complete')
-"
+          python3 scripts/validate_scram_policies.py
       - name: Summary
         run: |
           echo "========================================"
