fix(deps): add pytest-asyncio for async test support (GATE-2 fix)
PAC-JEFFREY-AUTH-ENFORCEMENT-REPLACEMENT-R3C-001

- Added pytest-asyncio==0.24.0 to requirements.txt
- Added pytest.ini_options with asyncio_mode='auto' to pyproject.toml
- Required for TestSessionManager async tests to run correctly

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,3 +56,8 @@ reportUnusedFunction = "information"
 reportUnusedVariable = "information"
 reportDuplicateImport = false
 reportWildcardImportFromLibrary = false
+
+[tool.pytest.ini_options]
+# PAC-AUTH-R3C-001: Enable pytest-asyncio auto mode for async tests
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
