--- a/requirements.txt
+++ b/requirements.txt
@@ -91,6 +91,8 @@ Pygments==2.19.2
 pyparsing==3.2.4
 pyproject_hooks==1.2.0
 pytest==8.4.2
+# Required for async test functions (PAC-AUTH-R3C-001)
+pytest-asyncio==0.24.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
