--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ cycler==0.12.1
 Cython==3.1.4
 # PAC-SEC-P820/P825: Post-Quantum Cryptography - ML-DSA-65 (FIPS 204)
 dilithium-py==1.4.0
+# Note: pqcrypto library optional - see requirements-pqc.txt for full PQC suite
 dash==3.2.0
 dash-bootstrap-components==2.0.4
 dash-core-components==2.0.0
